# phosphor-state-manager

./: .secrets.baseline  chassis_state_manager.cpp  chassis_state_manager.hpp  host_reset_recovery.cpp  meson.build
redundant-bmc/: README.md  meson.build
redundant-bmc/src/: active_role_handler.cpp  active_role_handler.hpp  manager.cpp  manager.hpp  meson.build  passive_role_handler.cpp  passive_role_handler.hpp  rbmc_manager_main.cpp  role_determination.cpp  role_determination.hpp  role_handler.hpp  services.hpp  services_impl.cpp  services_impl.hpp  sibling.hpp  sibling_impl.cpp  sibling_impl.hpp
redundant-bmc/test/: meson.build  role_determination_test.cpp
service_files/: xyz.openbmc_project.State.BMC.Redundancy.service
target_files/: meson.build  obmc-bmc-active.target  obmc-bmc-passive.target
